[package]
name = "version-history-inference"
version = "0.1.0"
edition = "2021"

[dependencies]
chu-liu-edmonds = "0.1.0"
clap = { version = "4.5.24", features = ["cargo"] }
dircpy = "0.3.19"
disjoint = "0.8.0"
git2 = "0.20.0"
indicatif = "0.17.11"
ndarray = "0.15"
octocrab = "0.43.0"
pretty_assertions = "1.4.1"
render_as_tree = "0.2.1"
serde = "1.0.219"
serde_json = "1.0.139"
similar = "2.6.0"
tempdir = "0.3.7"
tokio = { version = "1", features = ["full"] }
